// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaymentInitiation methods Issuers 1`] = `
[
  {
    "channel": "Web",
    "data": undefined,
    "method": "GET",
    "path": "/json/Transaction/Specification/paybybank?serviceVersion=1",
  },
]
`;

exports[`PaymentInitiation methods Pay 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountDebit": 100.3,
      "Currency": "EUR",
      "Invoice": "64752550bf1f40",
      "Order": "64752550bf1f40",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Pay",
            "Name": "paybybank",
            "Parameters": [
              {
                "Name": "Issuer",
                "Value": "RABONL2U",
              },
              {
                "Name": "CountryCode",
                "Value": "NL",
              },
            ],
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;

exports[`PaymentInitiation methods Refund 1`] = `
[
  {
    "channel": "Web",
    "data": {
      "AmountCredit": 0.01,
      "Currency": "EUR",
      "Description": "Buckaroo Node SDK Refund Transaction Test",
      "Invoice": "64752550bf1f40",
      "OriginalTransactionKey": "93FA5B31D80C489BB0822A3BD8037D6E",
      "PushURL": "https://example.com/push",
      "ReturnURL": "https://example.com/return",
      "Services": {
        "ServiceList": [
          {
            "Action": "Refund",
            "Name": "paybybank",
            "Version": 0,
          },
        ],
      },
      "ServicesSelectableByClient": "",
    },
    "method": "POST",
    "path": "/json/Transaction",
  },
]
`;
